# Python_Assignment

./: CMakeLists.txt  details.md  test.py
BigIntegerTest/: BigIntegerTest0.in  BigIntegerTest0.out  BigIntegerTest1.in  BigIntegerTest1.out  BigIntegerTest10.in  BigIntegerTest10.out  BigIntegerTest11.in  BigIntegerTest11.out  BigIntegerTest12.in  BigIntegerTest12.out  BigIntegerTest13.in  BigIntegerTest13.out  BigIntegerTest14.in  BigIntegerTest14.out  BigIntegerTest15.in  BigIntegerTest15.out  BigIntegerTest16.in  BigIntegerTest16.out  BigIntegerTest17.in  BigIntegerTest17.out  BigIntegerTest18.in  BigIntegerTest18.out  BigIntegerTest19.in  BigIntegerTest19.out  BigIntegerTest2.in  BigIntegerTest2.out  BigIntegerTest3.in  BigIntegerTest3.out  BigIntegerTest4.in  BigIntegerTest4.out  BigIntegerTest5.in  BigIntegerTest5.out  BigIntegerTest6.in  BigIntegerTest6.out  BigIntegerTest7.in  BigIntegerTest7.out  BigIntegerTest8.in  BigIntegerTest8.out  BigIntegerTest9.in  BigIntegerTest9.out
src/: Evalvisitor.cpp  Evalvisitor.h  main.cpp
testData/: test0.in  test1.in  test11.in  test12.in  test12.out  test17.in  test2.in  test2.out  test20.in  test25.in  test3.in  test3.out  test4.in  test49.in  test6.in  test7.in  test7.out
